tests/ui/const_prop/const-prop-read-static-in-const.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const-prop-read-static-in-const.rs:5:18
   |
LL | const TEST: u8 = MY_STATIC;
   |                  ^^^^^^^^^ constant accesses static

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/const-prop-read-static-in-const.rs:5:18
   |
LL | const TEST: u8 = MY_STATIC;
   |                  ^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
